--- a/KosaESS/src/main/resources/templates/include/student_subbar.html
+++ b/KosaESS/src/main/resources/templates/include/student_subbar.html
@@ -19,6 +19,9 @@
 			<li data-image="/img/worklog_white.png"
 				data-original-image="/img/worklog_navy.png"><img
 				th:src="@{/img/worklog_navy.png}"><span>출퇴근 관리</span></li>
+			<li data-image="/img/inquiry_white.png"
+				data-original-image="/img/inquiry_navy.png"><img
+				th:src="@{/img/inquiry_white.png}"><span>문의 내역</span></li>
 		</ul>
 	</div>
 </body>
