--- a/KosaESS/src/main/resources/templates/student/notice_detail.html
+++ b/KosaESS/src/main/resources/templates/student/notice_detail.html
@@ -6,6 +6,7 @@
 <link th:href="@{/css/student/post_detail.css}" rel="stylesheet">
 <link rel="icon" href="/img/icon.png" />
 <meta charset="UTF-8">
+<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 </head>
 <body>
 	<div th:replace="~{/include/student_header :: header}"
@@ -59,5 +60,6 @@
 			</div>
 		</div>
 	</div>
+	<script src="/js/student/notice_detail.js"></script>
 </body>
 </html>
