--- a/KosaESS/src/main/resources/static/css/student/notice_list.css
+++ b/KosaESS/src/main/resources/static/css/student/notice_list.css
@@ -63,10 +63,9 @@
 	text-align: center;
 }
 
-a , .searchBtn{
+a, .searchBtn {
 	cursor: pointer;
 }
-
 
 .search {
 	display: flex;
@@ -103,4 +102,37 @@ input::placeholder {
 .searchInput {
 	width: 50%;
 	margin-left: 20%;
+}
+
+.paging {
+	width: 90%;
+	margin: auto;
+	margin-top: 1%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.paging i {
+	font-size: 15px;
+	border: black;
+}
+
+.pages span {
+	margin: 5px 10px; 
+	font-size: 22px;
+	border: black;
+	padding: 5px 12px;
+	font-weight: bold;
+	cursor: pointer;
+}
+
+.pages {
+	align-items: center;
+	display: flex;
+}
+
+.active {
+	background: #E7EFF3;
+	border: solid 2px #0E5881
 }
