--- a/KosaESS/src/main/resources/templates/student/notice_list.html
+++ b/KosaESS/src/main/resources/templates/student/notice_list.html
@@ -6,6 +6,7 @@
 <link th:href="@{/css/student/notice_list.css}" rel="stylesheet">
 <link rel="icon" href="/img/icon.png" />
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 <meta charset="UTF-8">
 </head>
 <body>
@@ -31,76 +32,27 @@
 						<td>조회수</td>
 					</tr>
 				<tbody>
-					<tr class="noticeRow" th:each="postVO , rowStat: ${postList}">
+					<!-- <tr class="noticeRow" th:each="postVO , rowStat: ${postList}">
 						<td><span th:text="${rowStat.index + 1}"></span></td>
 						<td><a><span class="goNoticeDetail"
 								style="font-size: 17px;" th:text="${postVO.postTitle}"></span></a></td>
 						<td><span th:text="${postVO.rgstDd}"></span></td>
 						<td><span th:text="${postVO.postHit}"></span></td>
 						<td style="display: none;"><span th:text="${postVO.postId}"></span></td>
-					</tr>
+					</tr> -->
 				</tbody>
 			</table>
+			<div class="paging">
+				<i class="left" id="first_page"><img
+					th:src="@{/img/first_page.png}"></img></i> <i class="left"
+					id="prev_page"><img th:src="@{/img/prev_page.png}"></img></i>
+				<div class="pages"></div>
+				<i class="right" id="next_page"><img
+					th:src="@{/img/next_page.png}"></img></i> <i class="right"
+					id="last_page"><img th:src="@{/img/last_page.png}"></img></i>
+			</div>
 		</div>
 	</div>
-	<script>
-		$('.goNoticeDetail').click(function() {
-			// 서버로 조회수 증가 요청을 보냅니다.
-			var clickedRow = $(this).closest('tr');
-			var postId = clickedRow.find('td:hidden span').text();
-			$.ajax({
-				type : 'POST',
-				url : '/student/incrementHit',
-				data : {
-					postId : postId
-				},
-				success : function() {
-					window.location.href = '/student/notice/' + postId;
-				}
-			});
-		});
-		$('.searchInput').on('keyup', function(event) {
-			if (event.key === "Enter") {
-				$('.searchBtn').trigger('click');
-			}
-		});
-		// 검색 버튼 클릭 시의 처리 코드
-		$('.searchBtn').click(function() {
-			// 검색어를 가져옵니다.
-			var searchKeyword = $('.searchInput').val().trim();
-
-			// Ajax 요청을 보냅니다.
-			$.ajax({
-				type : 'GET',
-				url : '/student/notice/search',
-				data : {
-					keyword : searchKeyword,
-				},
-				success : function(data) {
-					// 받은 데이터로 테이블을 업데이트합니다.
-					var noticeTable;
-					noticeTable = $('.notice-table tbody');
-					noticeTable.empty(); // 테이블 내용을 비웁니다.
-
-					for (var i = 0; i < data.length; i++) {
-						var postVO = data[i];
-						var row = $('<tr class="noticeRow"></tr>');
-						row.append('<td><span >' + (i + 1) + '</span></td>');
-						row.append('<td><a><span class="goNoticeDetail" style="font-size: 17px;">' + postVO.postTitle + '</span></a></td>');
-						row.append('<td><span>'+ postVO.rgstDd +'</span></td>')
-						row.append('<td><span>'+ postVO.postHit +'</span></td>')
-						row.append('<td style="display: none;"><span>'+ postVO.postId +'</span></td>')
-						noticeTable.append(row);
-					}
-					$('.totalRowCount').text(data.length);
-				}
-			});
-		});
-
-		function updateTable() {
-			// 검색 버튼 클릭 이벤트 호출
-			$('.searchBtn').trigger('click');
-		}
-	</script>
+	<script src="/js/student/notice_detail.js"></script>
 </body>
 </html>
