--- a/KosaESS/src/main/resources/templates/admin/notice_list.html
+++ b/KosaESS/src/main/resources/templates/admin/notice_list.html
@@ -76,7 +76,7 @@
 			<!-- 컨텐츠 개수와 버튼 wrap -->
 			<div class="content_info_wrap">
 				<div class="content_info">
-					<span>총 게시물 <span class="notice_list_cnt"
+					<span>게시물 총 <span class="notice_list_cnt"
 						th:text="${#lists.size(noticeList)}">noticeListCnt</span>건
 					</span>
 				</div>
