--- a/KosaESS/src/main/resources/templates/admin/inquiry_list.html
+++ b/KosaESS/src/main/resources/templates/admin/inquiry_list.html
@@ -78,7 +78,7 @@
 			<!-- 컨텐츠 개수와 버튼 wrap -->
 			<div class="content_info_wrap">
 				<div class="content_info">
-					<span>총 게시물 <span class="inquiry_list_cnt"
+					<span>게시물 총 <span class="inquiry_list_cnt"
 						th:text="${#lists.size(inquiryList)}"></span>건
 					</span>
 				</div>
