--- a/KosaESS/src/main/resources/templates/manager/student_list.html
+++ b/KosaESS/src/main/resources/templates/manager/student_list.html
@@ -17,6 +17,8 @@
 		<div class="title_wrap">
 			<span class="title" th:text="${title}"></span>
 			<input id="class_id_save" type="text" style="display: none;"> 
+			<input id="start_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssStartDd:null}" style="display: none;"> 
+			<input id="end_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssEndDd:null}" style="display: none;"> 
 		</div>
 
 		<!-- content wrap-->
@@ -26,20 +28,27 @@
 				<div class="search_filter_table_wrap">
 					<table class="search_filter_table" style="width: 100%;">
 						<tr>
-							<td style="width: 10%;">교육과정명</td>
+							<td class="search_filter_name">교육과정명</td>
 							<td style="width: 30%;">
 								<select id="classId">
 									<option value="" disabled selected>교육과정명을 선택하세요</option>
 									<option th:each="class:${classList}" th:text="${class.clssNm}" th:value="${class}" />
 								</select>
 							</td>
-							<td style="width: 10%;">검색 기간</td>
-							<td style="width: 30%;"><input type="date" id="startDate"><span> ~ </span><input type="date" id="endDate"></td>
+							<td class="search_filter_name">검색 기간</td>
+							<td style="width: 30%;">
+								<input type="date" id="startDate" min="1980-01-01">
+								<span> ~ </span>
+								<input type="date" id="endDate" min="1980-01-01">
+								<span>이번 달</span><input type="radio" name="default_period" id="this_month" value="thisMonth">
+								<span>이번 주</span><input type="radio" name="default_period" id="this_week" value="thisWeek">
+								<span>시작~종료</span><input type="radio" name="default_period" id="this_class_period" value="thisClassPeriod">
+							</td>
 						</tr>
 						<tr>
-							<td style="width: 10%;">검색어</td>
+							<td class="search_filter_name">검색어</td>
 							<td style="width: 30%;"><input type="text" class="input_keyword" placeholder="이메일 또는 이름"></td>
-							<td style="width: 10%;">이수 상태</td>
+							<td class="search_filter_name">이수 상태</td>
 							<td style="width: 30%;">
 								<span class="chk_all_span">
 									<label th:text="전체" class="chk_all_label"></label>
@@ -65,7 +74,7 @@
 			<!-- 테이블 조작 -->
 			<div class="table_controller" id="tableController">
 				<span>
-					<span th:text="${stdtCnt}" id="stdtCnt"></span><span>명</span>
+					<span th:text="${stdtCnt}" id="stdtCnt"></span><span class="stdt_count_unit">명</span>
 				</span>
 				<span th:each="cmptCodeName:${cmptCodeNameList}" class="cmpt_controller">
 					<button onclick="cmptUpdate(this)" th:value="${cmptCodeName.cmcdId}" th:text="${cmptCodeName.cmcdNm}" class="cmpt_btn" th:classappend="${cmptCodeNameStat.count}"></button>
@@ -100,7 +109,7 @@
 						<td class="fixed_length_cell" th:text="${stdt.birthDd}">생년월일</td>
 						<td class="number_cell" th:each="wlogCodeName:${wlogCodeNameList}" th:text="${#strings.substring(#strings.setSplit(stdt.wlogCnt,',')[wlogCodeNameStat.count-1],10,)}">?</td>
 						<td class="number_cell" th:text="${#numbers.formatDecimal(stdt.cmptRate, 1, 1)}"></td>
-						<td th:text="${stdt.jobCd}">이수여부</td>
+						<td class="fixed_length_cell" th:text="${stdt.jobCd}">이수여부</td>
 					</tr>
 				</tbody>
 			</table>
@@ -109,5 +118,6 @@
 	</div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script th:inline="javascript"></script>
 <script src="/js/manager/student_list.js"></script>
 </html>
