--- a/KosaESS/src/main/resources/templates/student/mypage.html
+++ b/KosaESS/src/main/resources/templates/student/mypage.html
@@ -184,11 +184,11 @@
 					<table class="postTable">
 						<thead>
 							<tr>
-								<td>번호</td>
-								<td>문의내역명</td>
-								<td>문의날짜</td>
-								<td>답변상태</td>
-								<td>답변확인</td>
+								<th>번호</th>
+								<th>문의내역명</th>
+								<th>문의날짜</th>
+								<th>답변상태</th>
+								<th>답변확인</th>
 							</tr>
 						</thead>
 					</table>
