--- a/KosaESS/src/main/resources/static/css/student/inquiry_list.css
+++ b/KosaESS/src/main/resources/static/css/student/inquiry_list.css
@@ -144,5 +144,86 @@ input::placeholder {
 
 .active {
 	background: #E7EFF3;
-	border: solid 2px #0E5881
+}
+
+.modal {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: none;
+	background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modalBody {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 500px;
+	height: 520px;
+	text-align: center;
+	background-color: rgb(255, 255, 255);
+	border-radius: 10px;
+	box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
+	transform: translateX(-50%) translateY(-50%);
+	box-shadow: 0 5px 15px rgba(#000, .2);
+}
+
+.modalHeader {
+	display: flex;
+	padding: 7%;
+	justify-content: center;
+	background-color: #E7EFF3;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+
+.upload-area {
+	margin: 5% auto;
+	padding: 13% 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: white;
+	color: black;
+	border-style: dashed;
+	border-color: darkgray;
+	font-size: 18px;
+	width: 90%;
+	border-radius: 10px;
+}
+
+.upload-name{
+	display: inline-block;
+	padding: 3%;
+	vertical-align: middle;
+	border: 1px solid #dddddd;
+	width: 60%;
+	color: black;
+}
+
+.upload-area label {
+	display: inline-block;
+	padding: 3% 5%;
+	color: black;
+	background-color: #E7EFF3;
+	cursor: pointer;
+	font-size: 15px;
+	border-radius: 10px;
+}
+
+.upload-area input[type="file"] {
+	position: absolute;
+	width: 0;
+	height: 0;
+	padding: 0;
+	overflow: hidden;
+	border: 0;
+}
+
+.modal-footer {
+	padding: 2%;
+	display: flex;
+	justify-content: flex-end;
 }
