[seungwoo][#etc] 임시저장

--- a/KosaESS/src/main/resources/templates/include/manager_header_2.html
+++ b/KosaESS/src/main/resources/templates/include/manager_header_2.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="header">
 <meta charset="UTF-8">
-<link th:href="@{/css/manager_subbar_2.css}" rel="stylesheet">
+<link th:href="@{/css/manager_subbar.css}" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
