--- a/KosaESS/src/main/resources/static/css/manager/manager_class_detail.css
+++ b/KosaESS/src/main/resources/static/css/manager/manager_class_detail.css
@@ -1,9 +1,15 @@
 .home-section .title {
 	display: inline-block;
+	justify-content : center;
 	color: #333333;
 	font-size: 30px;
 	font-weight: bold;
 	margin: 40px;
+}
+
+.home-section{
+	display: flex;
+	justify-content: center;
 }
 
 table {
@@ -41,6 +47,7 @@ table th {
 .content_wrap {
 /* 	display: flex; */
 	justify-content: center;
+	width:90%;
 /* 	border-style: groove; */
 /* 	border-color: blue; */
 /* 	border-width: 5px; */
@@ -57,9 +64,10 @@ table th {
 	padding-top: 5%;
 	flex-direction: column;
 	align-items: center;
+	justify-content : center;
 	flex-wrap: wrap;
 	width: 100%;
-	margin: 5% auto;
+/* 	margin: 5% auto; */
 	box-shadow: 0px 40px 40px rgba(0, 0, 0, 0.1); /* 그림자 추가 */
 	border-style: groove;
 	border-color: black;
