--- a/KosaESS/src/main/resources/static/css/manager/manager_student_list.css
+++ b/KosaESS/src/main/resources/static/css/manager/manager_student_list.css
@@ -7,21 +7,18 @@ select option[value=""][disabled] {
 }
 
 
-
-
-
 /*-------------------------------------------------------*/
 
 /* 공통 사항*/
 .home-section {
 	position: relative;
 	background: #fff;
-	min-height: 100vh;
 	top: 0;
 	left: 60px;
 	width: calc(100% - 60px);
 	transition: all 0.5s ease;
 	z-index: 2;
+	height: auto;
 }
 
 .sidebar.open ~ .home-section {
