--- a/KosaESS/src/main/resources/templates/manager/student_list.html
+++ b/KosaESS/src/main/resources/templates/manager/student_list.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{/include/manager_header :: header}">
+<head th:replace="~{/include/manager_header_2 :: header}">
 <meta charset="UTF-8">
 </head>
 <head>
-	<link th:href="@{/css/manager/manager_student_list.css}" rel="stylesheet" />
+<link th:href="@{/css/manager/manager_student_list.css}"
+	rel="stylesheet" />
 </head>
 <body>
 	<!-- 서브바 부분 -->
@@ -16,11 +17,13 @@
 		<!-- title -->
 		<div class="title_wrap">
 			<span class="title" th:text="${title}"></span>
-			<input id="class_id_save" type="text" style="display: none;"> 
-			<input id="start_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssStartDd:null}" style="display: none;"> 
-			<input id="end_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssEndDd:null}" style="display: none;"> 
+			<input id="class_id_save" type="text">
+			<input id="start_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssStartDd:null}">
+			<input id="end_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssEndDd:null}">
+<!-- 			<input id="class_id_save" type="text" style="display: none;"> -->
+<!-- 			<input id="start_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssStartDd:null}" style="display: none;"> -->
+<!-- 			<input id="end_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssEndDd:null}" style="display: none;"> -->
 		</div>
-
 		<!-- content wrap-->
 		<div class="content_wrap">
 			<div class="search_filter_wrap">
@@ -29,54 +32,55 @@
 					<table class="search_filter_table" style="width: 100%;">
 						<tr>
 							<td class="search_filter_name">교육과정명</td>
-							<td style="width: 30%;">
-								<select id="classId">
+							<td style="width: 30%;"><select id="classId">
 									<option value="" disabled selected>교육과정명을 선택하세요</option>
-									<option th:each="class:${classList}" th:text="${class.clssNm}" th:value="${class}" />
-								</select>
-							</td>
+									<option th:each="class:${classList}" th:text="${class.clssNm}"
+										th:value="${class}" />
+							</select></td>
 							<td class="search_filter_name">검색 기간</td>
 							<td style="width: 30%;">
-								<input type="date" id="startDate" min="1980-01-01">
-								<span> ~ </span>
-								<input type="date" id="endDate" min="1980-01-01">
-								<span>이번 달</span><input type="radio" name="default_period" id="this_month" value="thisMonth">
-								<span>이번 주</span><input type="radio" name="default_period" id="this_week" value="thisWeek">
-								<span>시작~종료</span><input type="radio" name="default_period" id="this_class_period" value="thisClassPeriod">
+								<input type="date" id="startDate" min="1980-01-01"> <span> ~ </span> <input type="date" id="endDate" min="1980-01-01">
+								<span>이번 달</span>
+								<input type="radio" name="default_period" id="this_month" value="thisMonth">
+								<span>이번 주</span>
+								<input type="radio" name="default_period" id="this_week" value="thisWeek">
+								<span>시작~종료</span>
+								<input type="radio" name="default_period" id="this_class_period" value="thisClassPeriod">
 							</td>
 						</tr>
 						<tr>
 							<td class="search_filter_name">검색어</td>
-							<td style="width: 30%;"><input type="text" class="input_keyword" placeholder="이메일 또는 이름"></td>
+							<td style="width: 30%;"><input type="text"
+								class="input_keyword" placeholder="이메일 또는 이름"></td>
 							<td class="search_filter_name">이수 상태</td>
-							<td style="width: 30%;">
-								<span class="chk_all_span">
-									<label th:text="전체" class="chk_all_label"></label>
-									<input type="checkbox" checked="checked" id="chk_all_cmpt">
-								</span>
-								<span class="chk_all_span" th:each="cmptCN:${cmptCodeNameList}">
-									<label class="cmpt_name" th:text="${cmptCN.cmcdNm}"></label>
-									<input class="cmpt_checkbox" type="checkbox" checked="checked" th:value="${cmptCN.cmcdId}">
-								</span>
-							</td>
+							<td style="width: 30%;"><span class="chk_all_span"> <label
+									th:text="전체" class="chk_all_label"></label> <input
+									type="checkbox" checked="checked" id="chk_all_cmpt">
+							</span> <span class="chk_all_span" th:each="cmptCN:${cmptCodeNameList}">
+									<label class="cmpt_name" th:text="${cmptCN.cmcdNm}"></label> <input
+									class="cmpt_checkbox" type="checkbox" checked="checked"
+									th:value="${cmptCN.cmcdId}">
+							</span></td>
 						</tr>
 					</table>
 				</div>
 				<!-- 검색 버튼 -->
 				<div class="search_filter_btn_wrap">
-					<button class="search_reset_btn" th:id="resetButton" onclick="reset()">초기화</button>
-					<button class="search_filter_btn" th:id="searchButton" onclick="search()">검색</button>
+					<button class="search_reset_btn" th:id="resetButton"
+						onclick="reset()">초기화</button>
+					<button class="search_filter_btn" th:id="searchButton"
+						onclick="search()">검색</button>
 				</div>
 				<!-- End : 검색 버튼 -->
 			</div>
 			<!-- End : 검색 필터 테이블-->
-			
+
 			<!-- 테이블 조작 -->
 			<div class="table_controller" id="tableController">
-				<span>
-					<span th:text="${stdtCnt}" id="stdtCnt"></span><span class="stdt_count_unit">명</span>
-				</span>
-				<span th:each="cmptCodeName:${cmptCodeNameList}" class="cmpt_controller">
+				<span> <span th:text="${stdtCnt}" id="stdtCnt"></span><span
+					class="stdt_count_unit">명</span>
+				</span> <span th:each="cmptCodeName:${cmptCodeNameList}"
+					class="cmpt_controller">
 					<button onclick="cmptUpdate(this)" th:value="${cmptCodeName.cmcdId}" th:text="${cmptCodeName.cmcdNm}" class="cmpt_btn" th:classappend="${cmptCodeNameStat.count}"></button>
 				</span>
 			</div>
@@ -93,22 +97,27 @@
 						<th>연락처</th>
 						<th>성별</th>
 						<th>생년월일</th>
-						<th th:each="wlogCodeName:${wlogCodeNameList}" th:text="${wlogCodeName.cmcdNm}"></th>
-						<th>이수율<br>(%)</th>
+						<th th:each="wlogCodeName:${wlogCodeNameList}"
+							th:text="${wlogCodeName.cmcdNm}"></th>
+						<th>이수율<br>(%)
+						</th>
 						<th>이수 상태</th>
 					</tr>
 				</thead>
 				<tbody id="stdt_list_table_tbody" class="stdt_list_table_tbody">
 					<tr th:each="stdt:${stdtList}" class="stdt_list_table_row">
-						<td class="fixed_length_cell"><input type="checkbox" name="checkedStdt" th:value="${stdt.stdtId}"></td>
+						<td class="fixed_length_cell"><input type="checkbox"
+							name="checkedStdt" th:value="${stdt.stdtId}"></td>
 						<td class="fixed_length_cell" th:text="${stdtStat.count}"></td>
 						<td class="fixed_length_cell" th:text="${stdt.stdtNm}"></td>
 						<td th:text="${stdt.userEmail}">이메일</td>
 						<td class="fixed_length_cell" th:text="${stdt.stdtTel}">연락처</td>
 						<td class="fixed_length_cell" th:text="${stdt.genderCd}">성별</td>
 						<td class="fixed_length_cell" th:text="${stdt.birthDd}">생년월일</td>
-						<td class="number_cell" th:each="wlogCodeName:${wlogCodeNameList}" th:text="${#strings.substring(#strings.setSplit(stdt.wlogCnt,',')[wlogCodeNameStat.count-1],10,)}">?</td>
-						<td class="number_cell" th:text="${#numbers.formatDecimal(stdt.cmptRate, 1, 1)}"></td>
+						<td class="number_cell" th:each="wlogCodeName:${wlogCodeNameList}"
+							th:text="${#strings.substring(#strings.setSplit(stdt.wlogCnt,',')[wlogCodeNameStat.count-1],10,)}">?</td>
+						<td class="number_cell"
+							th:text="${#numbers.formatDecimal(stdt.cmptRate, 1, 1)}"></td>
 						<td class="fixed_length_cell" th:text="${stdt.jobCd}">이수여부</td>
 					</tr>
 				</tbody>
